--- a/css/Consulta.css
+++ b/css/Consulta.css
@@ -62,6 +62,13 @@ h2{
   border-radius: 10px;
   margin: 0.5%;
   padding: 0.5%;
+  text-align:center;
+}
+
+.lis{
+
+  padding: 5px 470px;
+
 }
 
 
@@ -75,20 +82,20 @@ h2{
   text-decoration: none;
   display: inline-flex;
   font-size: 20px;
-  margin: 10px 5px;
+  margin: 10px 50px;
   cursor: pointer;
   transition-duration: 0.5s;
-  width: 10%;  
+  width: 18%;  
 }
-  .btn-group .button:hover {
+.btn-group .button:hover {
     background-color: #1F3B73; 
   }
 
-  .btn-group .buttonText {
+.btn-group .buttonText {
     background-color: #ffffff;
     border: 1px 1px solid;
     color: rgb(0, 0, 0);
-    padding: 3px 3px;
+    padding: 5px 400px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -103,12 +110,24 @@ p{
 }
 #idDivConsulta{
     font-family: 'Merienda One', cursive;
-    background-color: #f1f0f7;
+    background-color: #fbfdfb;
     text-align: center;
     display: block;
-    margin: 10 auto;
+    margin: 100;
     border: 5px double #1F4373;
-}
+
+  }
+
+  .navbar-brand {
+    display: inline-block;
+    padding-top: 5px;
+    padding-bottom: 50px;
+    margin-right: 50px;
+    font-size: 10;
+    line-height: inherit;
+    white-space: nowrap;
+  }
+  
 .grilla{
     width:auto;    
     display: inline-block;
